[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/ComicNeue-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/button_font.tres" type="DynamicFont" id=3]

[sub_resource type="CapsuleShape2D" id=2]
radius = 74.0
height = 152.0

[sub_resource type="DynamicFont" id=3]
size = 86
font_data = ExtResource( 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button_Container" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -147.0
margin_top = -147.5
margin_right = 148.0
margin_bottom = 272.5
custom_constants/separation = 30

[node name="Singleplayer" type="Button" parent="Background/Button_Container"]
margin_right = 295.0
margin_bottom = 82.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="Background/Button_Container"]
margin_top = 112.0
margin_right = 295.0
margin_bottom = 195.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Multiplayer"

[node name="Tutorial" type="Button" parent="Background/Button_Container"]
margin_top = 225.0
margin_right = 295.0
margin_bottom = 307.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Tutorial"

[node name="Credits" type="Button" parent="Background/Button_Container"]
margin_top = 337.0
margin_right = 295.0
margin_bottom = 420.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="Logo" type="StaticBody2D" parent="."]
position = Vector2( 236, 165 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Logo"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Logo"]

[node name="Label" type="Label" parent="Logo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -115.0
margin_top = -50.0
margin_right = 115.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
text = "WANÂ®"
align = 1

[connection signal="pressed" from="Background/Button_Container/Singleplayer" to="." method="_on_Singleplayer_pressed"]
[connection signal="pressed" from="Background/Button_Container/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="Background/Button_Container/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Background/Button_Container/Credits" to="." method="_on_Credits_pressed"]
