[gd_scene load_steps=19 format=3 uid="uid://n3aeb8bertsg"]

[ext_resource type="Script" path="res://scenes/main_menu/Main_Menu.gd" id="2"]
[ext_resource type="StyleBox" path="res://assets/styles/background.tres" id="4_pxjq7"]
[ext_resource type="StyleBox" uid="uid://hgk6f5x18ic1" path="res://assets/styles/button_green.tres" id="5_cuyl1"]
[ext_resource type="StyleBox" uid="uid://hgk6f5x18ic1" path="res://assets/styles/button_green_disabled.tres" id="6_8mqqk"]
[ext_resource type="PackedScene" path="res://scenes/main_menu/PhysicsTriangle.tscn" id="7"]
[ext_resource type="StyleBox" uid="uid://hgk6f5x18ic1" path="res://assets/styles/button_red.tres" id="7_6uik5"]
[ext_resource type="PackedScene" path="res://scenes/main_menu/PhysicsEllipse.tscn" id="8"]
[ext_resource type="StyleBox" uid="uid://648wxnv4x6j2" path="res://assets/styles/logo_background.tres" id="9_mnoon"]
[ext_resource type="StyleBox" uid="uid://hgk6f5x18ic1" path="res://assets/styles/button_red_disabled.tres" id="10"]
[ext_resource type="FontFile" uid="uid://dcwvcumdom530" path="res://assets/fonts/ComicNeue-Regular.ttf" id="10_20qa8"]

[sub_resource type="Animation" id="11"]
resource_name = "MultiPlayer_Transition2"
length = 0.4
step = 0.01

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center Buttons/ButtonContainer:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="Animation" id="6"]
resource_name = "Screen_Transition"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LogoBackground:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, false]
}

[sub_resource type="Animation" id="9"]
resource_name = "SinglePlayer_Transition"
length = 0.4

[sub_resource type="Animation" id="7"]
resource_name = "Unused_Transition"
length = 0.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center Buttons/ButtonContainer:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6r1n"]
_data = {
"MultiPlayer_Transition2": SubResource("11"),
"RESET": SubResource("5"),
"Screen_Transition": SubResource("6"),
"SinglePlayer_Transition": SubResource("9"),
"Unused_Transition": SubResource("7")
}

[sub_resource type="CapsuleShape2D" id="4"]
radius = 144.0
height = 866.0

[sub_resource type="Curve2D" id="Curve2D_vxqhb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1080, 0, 0, 0, 0, 0, 1080, 1920, 0, 0, 0, 0, 0, 1920, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="MainMenu" type="Node"]
script = ExtResource("2")
triangleScene = ExtResource("7")
ellipseScene = ExtResource("8")

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y6r1n")
}

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_pxjq7")

[node name="UserInfo" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Adjective" type="Button" parent="UserInfo"]
layout_mode = 0
offset_right = 195.0
offset_bottom = 75.0

[node name="Noun" type="Button" parent="UserInfo"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_bottom = 75.0
grow_horizontal = 0

[node name="Picture" type="Label" parent="UserInfo"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_right = 40.0
grow_vertical = 0

[node name="ButtonCenter" type="CenterContainer" parent="."]
anchors_preset = -1
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="ButtonCenter"]
layout_mode = 2
offset_left = 144.0
offset_top = 244.0
offset_right = 935.0
offset_bottom = 1004.0

[node name="Singleplayer" type="Button" parent="ButtonCenter/ButtonContainer"]
layout_mode = 2
offset_right = 791.0
offset_bottom = 187.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_cuyl1")
theme_override_styles/hover = ExtResource("5_cuyl1")
theme_override_styles/pressed = ExtResource("5_cuyl1")
theme_override_styles/disabled = ExtResource("6_8mqqk")
theme_override_styles/focus = ExtResource("6_8mqqk")
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="ButtonCenter/ButtonContainer"]
layout_mode = 2
offset_top = 191.0
offset_right = 791.0
offset_bottom = 378.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("7_6uik5")
theme_override_styles/hover = ExtResource("7_6uik5")
theme_override_styles/pressed = ExtResource("7_6uik5")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("7_6uik5")
disabled = true
text = "Multiplayer"

[node name="Tutorial" type="Button" parent="ButtonCenter/ButtonContainer"]
layout_mode = 2
offset_top = 382.0
offset_right = 791.0
offset_bottom = 569.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("5_cuyl1")
theme_override_styles/hover = ExtResource("5_cuyl1")
theme_override_styles/pressed = ExtResource("5_cuyl1")
theme_override_styles/disabled = ExtResource("6_8mqqk")
theme_override_styles/focus = ExtResource("5_cuyl1")
text = "Tutorial"

[node name="Credits" type="Button" parent="ButtonCenter/ButtonContainer"]
layout_mode = 2
offset_top = 573.0
offset_right = 791.0
offset_bottom = 760.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = ExtResource("7_6uik5")
theme_override_styles/hover = ExtResource("7_6uik5")
theme_override_styles/pressed = ExtResource("7_6uik5")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("7_6uik5")
text = "Credits"

[node name="LogoBackground" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.25
grow_horizontal = 2
theme_override_styles/panel = ExtResource("9_mnoon")

[node name="LogoLabel" type="Label" parent="LogoBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -116.0
offset_right = 261.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_20qa8")
theme_override_font_sizes/font_size = 200
text = "WANÂ®"

[node name="Logo" type="StaticBody2D" parent="LogoBackground"]

[node name="LogoCollisions" type="CollisionShape2D" parent="LogoBackground/Logo"]
visible = false
position = Vector2(432, 144)
rotation = 1.5708
shape = SubResource("4")

[node name="ShapePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_vxqhb")

[node name="ShapeSpawnLocation" type="PathFollow2D" parent="ShapePath"]

[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]
[connection signal="pressed" from="UserInfo/Adjective" to="." method="_on_Adjective_pressed"]
[connection signal="pressed" from="UserInfo/Noun" to="." method="_on_Noun_pressed"]
